--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "vite_react_shadcn_ts",
+  "name": "todo-app-lakebase",
+  "description": "Full-stack Todo application with React frontend and Lakebase integration",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
